--- a/brme-client/src/app/bookings/containers/home/home.component.html
+++ b/brme-client/src/app/bookings/containers/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="container">
-  <h1>Bienvenue sur le site de réservation des salles de la Me</h1>
-  <p>
+  <h1 style="text-align: center">Bienvenue sur le site de réservation des salles de la Me</h1>
+  <div class="row justify-content-center m-2">
+    <div class="col-11">
+      <img src="../../../../assets/me.jpg" style="width: 100%;">
+    </div>
+  </div>
+
+  <p style="text-align: center">
     Vous pouvez consulter l'état de réservation d'une salle en la sélectionnant.<br>
     <br>
     Connectez vous pour pouvoir réserver les salles.
