fix: error in rooms when not connected

--- a/brme-client/src/app/bookings/containers/room/room.component.html
+++ b/brme-client/src/app/bookings/containers/room/room.component.html
@@ -23,7 +23,7 @@
               (switchQuarterState)="switchQuarterState($event, i)">
     </brme-day>
   </div>
-  <brme-special-booker *ngIf="(currentUser$ | async).role!==null"
+  <brme-special-booker *ngIf="(currentUser$ | async)!==null && (currentUser$ | async).role!==null"
                        [currentUser]="currentUser$ | async"
                        [currentRoom]="currentRoom$ | async"
                        [currentDate]="currentDate$ | async"
